--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -14,7 +14,7 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-      <!--  <activity android:name=".UnRegisterActivity"></activity>-->
+        <activity android:name=".UnRegisterActivity"></activity>-
         <activity android:name=".HookActivity" />
         <activity android:name=".TestActivity" />
         <activity android:name=".MainActivity">
